--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@
 :page-permalink: /guides/{projectid}
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master/
 :source-highlighter: prettify
-= Enabling Cross-Origin Resource Sharing in Open Liberty
+= Enabling Cross-Origin Resource Sharing (CORS) in Open Liberty
 
 Learn how to enable Cross-Origin Resource Sharing (CORS) in Open Liberty without writing Java(TM) code.
 
