--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@
 :source-highlighter: prettify
 = Enabling Cross-Origin Resource Sharing (CORS) in Open Liberty
 
-Learn how to enable Cross-Origin Resource Sharing (CORS) in Open Liberty without writing Java(TM) code.
+Learn how to enable Cross-Origin Resource Sharing (CORS) in Open Liberty without writing Java code.
 
 // =================================================================================================
 // What you'll learn
