--- a/README.adoc
+++ b/README.adoc
@@ -6,11 +6,10 @@
 // Contributors:
 //   IBM Corporation
 :projectid: cors
-:page-layout: guide
+:page-layout: guide-multipane
 :page-duration: 15 minutes
 :page-releasedate: 2017-10-12
 :page-description: Learn how to enable CORS in Open Liberty without writing Java code to access resources from an external domain.
-:page-tags: ['CORS']
 :page-permalink: /guides/{projectid}
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master/
 :source-highlighter: prettify
@@ -59,8 +58,10 @@ the attributes that you will add in the two CORS configurations.
 
 ==== Simple CORS request
 
-According to the CORS specification, an HTTP request is a simple CORS request if the request method is `GET`, `HEAD`, or `POST`. The header fields are any one of the `Accept`, `Accept-Language`, `Content-Language`, or `Content-Type` headers. The `Content-Type` header has a value of `application/x-www-form-urlencoded`, `multipart/form-data`,
-or `text/plain`.
+According to the CORS specification, an HTTP request is a simple CORS request if the request 
+method is `GET`, `HEAD`, or `POST`. The header fields are any one of the `Accept`, 
+`Accept-Language`, `Content-Language`, or `Content-Type` headers. The `Content-Type` header 
+has a value of `application/x-www-form-urlencoded`, `multipart/form-data`, or `text/plain`.
 
 When clients, such as browsers, send simple CORS requests to servers on different domains, the clients include an
 `Origin` header with the client host name as the value. If the server allows the origin, the server includes an `Access-Control-Allow-Origin` header with a list of allowed origins or an asterisk (*) in the response back to the client. The asterisk indicates that all origins are allowed to access the endpoint on the server.
@@ -97,34 +98,49 @@ Send the simple request to the `/configurations/simple` endpoint and the preflig
 // =================================================================================================
 
 === Enabling a simple CORS configuration
-
-Configure the server to allow the `/configurations/simple` endpoint to accept a simple CORS request.
-Add a simple CORS configuration to the `server.xml` file in the `start/main/liberty/config/` directory:
-
-[source, xml]
+server.xml
+[source, xml, linenums, role='code_column']
 ----
 include::finish/src/main/liberty/config/server.xml[tags=simple-config]
 ----
 
+Configure the server to allow the `/configurations/simple` endpoint to accept a simple CORS request.
+Add a simple CORS configuration to the [hotspot=1-29]`server.xml` file in the `start/main/liberty/config/` directory:
+
+[role="code_command hotspot=1-29", subs="quotes"]
+----
+Edit the server configuration file
+`src/main/liberty/config/server.xml`
+----
+
 The simple CORS configuration contains the following attributes:
 
-domain:: The endpoint to be configured for CORS requests. Set the value to `/configurations/simple`.
-allowedOrigins:: Origins that are allowed to access the endpoint. Set the value to `openliberty.io`.
-allowedMethods:: HTTP methods that a client is allowed to use when it makes requests to the endpoint. Set the value to `GET`.
-allowCredentials:: A boolean that indicates whether the user credentials can be included in the request. Set the value to `true`.
-exposeHeaders:: Headers that are safe to expose to clients. Set the value to `MyHeader`.
+[hotspot=13]`domain`:: The endpoint to be configured for CORS requests. Set the value to `/configurations/simple`.
+[hotspot=14]`allowedOrigins`:: Origins that are allowed to access the endpoint. Set the value to `openliberty.io`.
+[hotspot=15]`allowedMethods`:: HTTP methods that a client is allowed to use when it makes requests to the endpoint. Set the value to `GET`.
+[hotspot=16]`allowCredentials`:: A boolean that indicates whether the user credentials can be included in the request. Set the value to `true`.
+[hotspot=17]`exposeHeaders`:: Headers that are safe to expose to clients. Set the value to `MyHeader`.
 
-Save the changes to the `server.xml` file. The `/configurations/simple` endpoint is now ready to be
+Save the changes to the [hotspot=1-29]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
 tested with a simple CORS request.
 
-Open `TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory. Add a test to test the simple CORS configuration you just added:
+Open `TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory.
 
-[source, java]
+
+Now we will test the simple CORS configuration that you added.
+
+[role="code_command hotspot=25-78", subs="quotes"]
+----
+Edit the TestCors class
+`src/test/java/it/io/openliberty/guides/cors/`
+----
+
+[source, java, linenums, role=code_column']
 ----
 include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=simpleTest]
 ----
 
-The `testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+The [hotspot=38-46]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
 
 The request is a `GET` HTTP request with the following header:
 
@@ -144,11 +160,12 @@ Expect the following response headers and values if the simple CORS request is s
 
 Go to the `start/` directory and run the following command:
 
-```
+[role=command]
+------------
 mvn install
-```
+------------
 
-The `testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
+The [hotspot=38-46]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
 `/configurations/simple` endpoint now accepts simple CORS requests.
 
 // =================================================================================================
@@ -156,57 +173,56 @@ The `testSimpleCorsRequest` test passes and prints the response headers with the
 // =================================================================================================
 
 === Enabling a preflight CORS configuration
-
-Configure the server to allow the `/configurations/preflight` endpoint to accept a preflight CORS request.
-Add another CORS configuration in the `server.xml` file in the `start/main/liberty/config/` directory:
-
-[source, xml]
+[source, xml, linenums, role='code_column']
 ----
 include::finish/src/main/liberty/config/server.xml[tags=preflight-config]
 ----
 
-The preflight CORS configuration has different values than the simple CORS configuration.
-
-domain:: Set the value to `/configurations/preflight` because the `domain` is a different endpoint.
-allowedOrigins:: Set the value to an asterisk (*) to allow requests from all origins.
-allowedMethods:: Set the value to `OPTIONS, DELETE`.
-allowCredentials:: Set the value to `true`.
-
-Add two new attributes:
-
-maxAge:: The number of seconds that a client can cache a response to a preflight request. Set the value to `10`.
-allowedHeaders:: Headers that a client can use in requests. Set the value to `MyOwnHeader1, MyOwnHeader2`.
-
-Save the changes to the `server.xml` file. The `/configurations/preflight` endpoint is now ready to
-be tested with a preflight CORS request.
-
-Add another test to the `TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
-
-[source, java]
+[source, java, linenums, role='code_column']
 ----
 include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=preflightTest]
 ----
 
-The `testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+Configure the server to allow the `/configurations/preflight` endpoint to accept a preflight CORS request.
+Add another CORS configuration in the [hotspot=1-29 file=0]`server.xml` file in the `start/main/liberty/config/` directory:
 
-The request is an `OPTIONS` HTTP request with the following headers:
+The preflight CORS configuration has different values than the simple CORS configuration.
+
+[hotspot=21 file=0]`domain`:: Set the value to `/configurations/preflight` because the `domain` is a different endpoint.
+[hotspot=22 file=0]`allowedOrigins`:: Set the value to an asterisk (*) to allow requests from all origins.
+[hotspot=23 file=0]`allowedMethods`:: Set the value to `OPTIONS, DELETE`.
+[hotspot=24 file=0]`allowCredentials`:: Set the value to `true`.
+
+Add two new attributes:
+
+[hotspot=26 file=0]`maxAge`:: The number of seconds that a client can cache a response to a preflight request. Set the value to [hotspot=26 file=0]`10`.
+[hotspot=25 file=0]`allowedHeaders`:: Headers that a client can use in requests. Set the value to [hotspot=25 file=0]`MyOwnHeader1, MyOwnHeader2`.
+
+Save the changes to the [hotspot=1-29 file=0]`server.xml` file. The `/configurations/preflight` endpoint is now ready to
+be tested with a preflight CORS request.
+
+Add another test to the [hotspot=25-78 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
+
+The [hotspot=51-59 file=1]`testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+
+The request is an [hotspot=54 file=1]`OPTIONS` HTTP request with the following headers:
 
 |===
 | *Header* | *Value*
 | Origin | anywebsiteyoulike.com
-| Access-Control-Request-Method | `DELETE`
-| Access-Control-Request-Headers | `MyOwnHeader2`
+| Access-Control-Request-Method | [hotspot=23 file=0]`DELETE`
+| Access-Control-Request-Headers | [hotspot=25 file=0]`MyOwnHeader2`
 |===
 
 Expect the following response headers and values if the preflight CORS request is successful, and the server is correctly configured:
 
 |===
 | *Header* | *Value*
-| Access-Control-Allow-Max-Age | 10
+| Access-Control-Allow-Max-Age | [hotspot=26 file=0]`10`
 | Access-Control-Allow-Origin | anywebsiteyoulike.com
-| Access-Control-Allow-Methods | `OPTIONS, DELETE`
-| Access-Control-Allow-Credentials | `true`
-| Access-Control-Allow-Headers | `MyOwnHeader1, MyOwnHeader2`
+| Access-Control-Allow-Methods | [hotspot=23 file=0]`OPTIONS, DELETE`
+| Access-Control-Allow-Credentials | [hotspot=24 file=0]`true`
+| Access-Control-Allow-Headers | [hotspot=25 file=0]`MyOwnHeader1, MyOwnHeader2`
 |===
 
 The `Access-Control-Allow-Origin` header has a value of `anywebsiteyoulike.com`
@@ -215,11 +231,12 @@ because the server is configured to allow all origins, and the request came with
 
 Go to the `start/` directory and run the following command:
 
-```
+[role=command]
+------------
 mvn install
-```
+------------
 
-The `testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
+The [hotspot=51-59]`testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
 The `/configurations/preflight` endpoint now allows preflight CORS requests.
 
 If you want, modify the server configuration and the test code to experiment with the
@@ -233,7 +250,8 @@ various CORS configuration attributes.
 == Great work! You're done!
 
 You enabled CORS support in Open Liberty. You added two different
-CORS configurations to allow two kinds of CORS requests in the `server.xml` file.
+CORS configurations to allow two kinds of CORS requests in the [hotspot=1-29]`server.xml` file.
 
 
 include::{common-includes}/finish.adoc[]
+include::https://raw.githubusercontent.com/OpenLiberty/guides-common/multipane/attribution.adoc[subs="attributes"]
