adding file numbers

--- a/README.adoc
+++ b/README.adoc
@@ -104,10 +104,16 @@ server.xml
 include::finish/src/main/liberty/config/server.xml[tags=simple-config]
 ----
 
+TestCors.java
+[source, java, linenums, role=code_column']
+----
+include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=simpleTest]
+----
+
 Configure the server to allow the `/configurations/simple` endpoint to accept a simple CORS request.
 Add a simple CORS configuration to the [hotspot=1-29]`server.xml` file in the `start/main/liberty/config/` directory:
 
-[role="code_command hotspot=1-29", subs="quotes"]
+[role="code_command hotspot=1-29 file=0", subs="quotes"]
 ----
 Edit the server configuration file
 `src/main/liberty/config/server.xml`
@@ -115,32 +121,26 @@ Edit the server configuration file
 
 The simple CORS configuration contains the following attributes:
 
-[hotspot=13]`domain`:: The endpoint to be configured for CORS requests. Set the value to `/configurations/simple`.
-[hotspot=14]`allowedOrigins`:: Origins that are allowed to access the endpoint. Set the value to `openliberty.io`.
-[hotspot=15]`allowedMethods`:: HTTP methods that a client is allowed to use when it makes requests to the endpoint. Set the value to `GET`.
-[hotspot=16]`allowCredentials`:: A boolean that indicates whether the user credentials can be included in the request. Set the value to `true`.
-[hotspot=17]`exposeHeaders`:: Headers that are safe to expose to clients. Set the value to `MyHeader`.
+[hotspot=13 file=0]`domain`:: The endpoint to be configured for CORS requests. Set the value to `/configurations/simple`.
+[hotspot=14 file=0]`allowedOrigins`:: Origins that are allowed to access the endpoint. Set the value to `openliberty.io`.
+[hotspot=15 file=0]`allowedMethods`:: HTTP methods that a client is allowed to use when it makes requests to the endpoint. Set the value to `GET`.
+[hotspot=16 file=0]`allowCredentials`:: A boolean that indicates whether the user credentials can be included in the request. Set the value to `true`.
+[hotspot=17 file=0]`exposeHeaders`:: Headers that are safe to expose to clients. Set the value to `MyHeader`.
 
-Save the changes to the [hotspot=1-29]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
+Save the changes to the [hotspot=1-29 file=0]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
 tested with a simple CORS request.
 
-Open `TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory.
+Open [hotspot=25-78 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory.
 
 Now we will test the simple CORS configuration that you added.
 
-[role="code_command hotspot=25-78", subs="quotes"]
+[role="code_command hotspot=25-78 file=1", subs="quotes"]
 ----
 Edit the TestCors class
 `src/test/java/it/io/openliberty/guides/cors/TestCors`
 ----
 
-TestCors.java
-[source, java, linenums, role=code_column']
-----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=simpleTest]
-----
-
-The [hotspot=38-46]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+The [hotspot=38-46 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
 
 The request is a `GET` HTTP request with the following header:
 
@@ -165,7 +165,7 @@ Go to the `start/` directory and run the following command:
 mvn install
 ----
 
-The [hotspot=38-46]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
+The [hotspot=38-46 file=1]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
 `/configurations/simple` endpoint now accepts simple CORS requests.
 
 // =================================================================================================
