--- a/README.adoc
+++ b/README.adoc
@@ -105,7 +105,7 @@ include::finish/src/main/liberty/config/server.xml[tags=simple-config]
 ----
 
 TestCors.java
-[source, java, linenums, role=code_column']
+[source, java, linenums, role='code_column']
 ----
 include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=simpleTest]
 ----
