--- a/README.adoc
+++ b/README.adoc
@@ -114,11 +114,11 @@ include::finish/src/main/liberty/config/server.xml[tags=**]
 
 The simple CORS configuration contains the following attributes:
 
-[hotspot=13 file=0]`domain`:: The endpoint to be configured for CORS requests. Set the value to `/configurations/simple`.
-[hotspot=14 file=0]`allowedOrigins`:: Origins that are allowed to access the endpoint. Set the value to `openliberty.io`.
-[hotspot=15 file=0]`allowedMethods`:: HTTP methods that a client is allowed to use when it makes requests to the endpoint. Set the value to `GET`.
-[hotspot=16 file=0]`allowCredentials`:: A boolean that indicates whether the user credentials can be included in the request. Set the value to `true`.
-[hotspot=17 file=0]`exposeHeaders`:: Headers that are safe to expose to clients. Set the value to `MyHeader`.
+[hotspot=12 file=0]`domain`:: The endpoint to be configured for CORS requests. Set the value to `/configurations/simple`.
+[hotspot=13 file=0]`allowedOrigins`:: Origins that are allowed to access the endpoint. Set the value to `openliberty.io`.
+[hotspot=14 file=0]`allowedMethods`:: HTTP methods that a client is allowed to use when it makes requests to the endpoint. Set the value to `GET`.
+[hotspot=15 file=0]`allowCredentials`:: A boolean that indicates whether the user credentials can be included in the request. Set the value to `true`.
+[hotspot=16 file=0]`exposeHeaders`:: Headers that are safe to expose to clients. Set the value to `MyHeader`.
 
 Save the changes to the [hotspot=1-29 file=0]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
 tested with a simple CORS request.
@@ -135,7 +135,7 @@ Edit the `TestCors` class
 TestCors.java
 [source, java, linenums, role='code_column']
 ----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=**]
+include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=simpleTest]
 ----
 
 The [hotspot=38-46 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
