--- a/README.adoc
+++ b/README.adoc
@@ -101,7 +101,7 @@ Send the simple request to the `/configurations/simple` endpoint and the preflig
 Configure the server to allow the `/configurations/simple` endpoint to accept a simple CORS request.
 Add a simple CORS configuration to the [hotspot=1-29]`server.xml` file in the `start/main/liberty/config/` directory:
 
-[role="code_command hotspot=1-29 file=0", subs="quotes"]
+[role="code_command hotspot=12-16 file=0", subs="quotes"]
 ----
 Edit the server configuration file
 `src/main/liberty/config/server.xml`
@@ -135,10 +135,10 @@ Edit the `TestCors` class
 TestCors.java
 [source, java, linenums, role='code_column']
 ----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=simpleTest]
+include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment]
 ----
 
-The [hotspot=38-46 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+The [hotspot=26-34 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
 
 The request is a `GET` HTTP request with the following header:
 
@@ -163,7 +163,7 @@ Go to the `start/` directory and run the following command:
 mvn install
 ----
 
-The [hotspot=38-46 file=1]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
+The [hotspot=26-34 file=1]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
 `/configurations/simple` endpoint now accepts simple CORS requests.
 
 // =================================================================================================
@@ -186,43 +186,56 @@ include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=p
 Configure the server to allow the `/configurations/preflight` endpoint to accept a preflight CORS request.
 Add another CORS configuration in the [hotspot=1-29 file=0]`server.xml` file in the `start/main/liberty/config/` directory:
 
+[role="code_command hotspot=18-23 file=0", subs="quotes"]
+----
+Edit the server configuration file
+`src/main/liberty/config/server.xml`
+----
+
 The preflight CORS configuration has different values than the simple CORS configuration.
 
-[hotspot=21 file=0]`domain`:: Set the value to `/configurations/preflight` because the `domain` is a different endpoint.
-[hotspot=22 file=0]`allowedOrigins`:: Set the value to an asterisk (*) to allow requests from all origins.
-[hotspot=23 file=0]`allowedMethods`:: Set the value to `OPTIONS, DELETE`.
-[hotspot=24 file=0]`allowCredentials`:: Set the value to `true`.
+[hotspot=18 file=0]`domain`:: Set the value to `/configurations/preflight` because the `domain` is a different endpoint.
+[hotspot=19 file=0]`allowedOrigins`:: Set the value to an asterisk (*) to allow requests from all origins.
+[hotspot=20 file=0]`allowedMethods`:: Set the value to `OPTIONS, DELETE`.
+[hotspot=21 file=0]`allowCredentials`:: Set the value to `true`.
 
 Add two new attributes:
 
-[hotspot=26 file=0]`maxAge`:: The number of seconds that a client can cache a response to a preflight request. Set the value to [hotspot=26 file=0]`10`.
-[hotspot=25 file=0]`allowedHeaders`:: Headers that a client can use in requests. Set the value to [hotspot=25 file=0]`MyOwnHeader1, MyOwnHeader2`.
+[hotspot=23 file=0]`maxAge`:: The number of seconds that a client can cache a response to a preflight request. Set the value to [hotspot=23 file=0]`10`.
+[hotspot=22 file=0]`allowedHeaders`:: Headers that a client can use in requests. Set the value to [hotspot=22 file=0]`MyOwnHeader1, MyOwnHeader2`.
 
 Save the changes to the [hotspot=1-29 file=0]`server.xml` file. The `/configurations/preflight` endpoint is now ready to
 be tested with a preflight CORS request.
 
 Add another test to the [hotspot=25-78 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
 
-The [hotspot=51-59 file=1]`testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
 
-The request is an [hotspot=54 file=1]`OPTIONS` HTTP request with the following headers:
+[role="code_command hotspot=39-47 file=1", subs="quotes"]
+----
+Edit the `TestCors` class
+`src/test/java/it/io/openliberty/guides/cors/TestCors`
+----
+
+The [hotspot=39-47 file=1]`testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+
+The request is an [hotspot=42 file=1]`OPTIONS` HTTP request with the following headers:
 
 |===
 | *Header* | *Value*
 | Origin | anywebsiteyoulike.com
 | Access-Control-Request-Method | [hotspot=23 file=0]`DELETE`
-| Access-Control-Request-Headers | [hotspot=25 file=0]`MyOwnHeader2`
+| Access-Control-Request-Headers | [hotspot=22 file=0]`MyOwnHeader2`
 |===
 
 Expect the following response headers and values if the preflight CORS request is successful, and the server is correctly configured:
 
 |===
 | *Header* | *Value*
-| Access-Control-Allow-Max-Age | [hotspot=26 file=0]`10`
+| Access-Control-Allow-Max-Age | [hotspot=23 file=0]`10`
 | Access-Control-Allow-Origin | anywebsiteyoulike.com
-| Access-Control-Allow-Methods | [hotspot=23 file=0]`OPTIONS, DELETE`
-| Access-Control-Allow-Credentials | [hotspot=24 file=0]`true`
-| Access-Control-Allow-Headers | [hotspot=25 file=0]`MyOwnHeader1, MyOwnHeader2`
+| Access-Control-Allow-Methods | [hotspot=20 file=0]`OPTIONS, DELETE`
+| Access-Control-Allow-Credentials | [hotspot=21 file=0]`true`
+| Access-Control-Allow-Headers | [hotspot=22 file=0]`MyOwnHeader1, MyOwnHeader2`
 |===
 
 The `Access-Control-Allow-Origin` header has a value of `anywebsiteyoulike.com`
@@ -236,7 +249,7 @@ Go to the `start/` directory and run the following command:
 mvn install
 ----
 
-The [hotspot=51-59]`testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
+The [hotspot=39-47 file=1]`testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
 The `/configurations/preflight` endpoint now allows preflight CORS requests.
 
 If you want, modify the server configuration and the test code to experiment with the
