--- a/README.adoc
+++ b/README.adoc
@@ -174,13 +174,13 @@ The [hotspot=26-34 file=1]`testSimpleCorsRequest` test passes and prints the res
 server.xml
 [source, xml, linenums, role='code_column']
 ----
-include::finish/src/main/liberty/config/server.xml[tags=preflight-config]
+include::finish/src/main/liberty/config/server.xml[tags=**]
 ----
 
 TestCors.java
 [source, java, linenums, role='code_column']
 ----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=preflightTest]
+include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment]
 ----
 
 Configure the server to allow the `/configurations/preflight` endpoint to accept a preflight CORS request.
