--- a/README.adoc
+++ b/README.adoc
@@ -123,14 +123,14 @@ The simple CORS configuration contains the following attributes:
 Save the changes to the [hotspot=1-29 file=0]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
 tested with a simple CORS request.
 
-Open [hotspot=15-64 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory.
+Open [hotspot=13-62 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory.
 
 Now we will test the simple CORS configuration that you added.
 
-[role="code_command hotspot=27-35 file=1", subs="quotes"]
+[role="code_command hotspot=25-33 file=1", subs="quotes"]
 ----
 Edit the `TestCors` class
-`src/test/java/it/io/openliberty/guides/cors/TestCors`
+`src/test/java/it/io/openliberty/guides/cors/TestCors.java`
 ----
 TestCors.java
 [source, java, linenums, role='code_column']
@@ -138,7 +138,7 @@ TestCors.java
 include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment]
 ----
 
-The [hotspot=27-35 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+The [hotspot=25-33 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
 
 The request is a `GET` HTTP request with the following header:
 
@@ -163,7 +163,7 @@ Go to the `start/` directory and run the following command:
 mvn install
 ----
 
-The [hotspot=27-35 file=1]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
+The [hotspot=25-33 file=1]`testSimpleCorsRequest` test passes and prints the response headers with their values from the endpoint. The
 `/configurations/simple` endpoint now accepts simple CORS requests.
 
 // =================================================================================================
@@ -207,16 +207,16 @@ Add two new attributes:
 Save the changes to the [hotspot=1-29 file=0]`server.xml` file. The `/configurations/preflight` endpoint is now ready to
 be tested with a preflight CORS request.
 
-Add another test to the [hotspot=15-64 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
+Add another test to the [hotspot=13-62 file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
 
 
-[role="code_command hotspot=39-47 file=1", subs="quotes"]
+[role="code_command hotspot=36-44 file=1", subs="quotes"]
 ----
 Edit the `TestCors` class
-`src/test/java/it/io/openliberty/guides/cors/TestCors`
+`src/test/java/it/io/openliberty/guides/cors/TestCors.java`
 ----
 
-The [hotspot=39-47 file=1]`testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
+The [hotspot=36-44 file=1]`testPreflightCorsRequest` test simulates a client sending a preflight CORS request. It first sends the request to the `/configurations/preflight` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
 
 The request is an [hotspot=41 file=1]`OPTIONS` HTTP request with the following headers:
 
@@ -249,7 +249,7 @@ Go to the `start/` directory and run the following command:
 mvn install
 ----
 
-The [hotspot=39-47 file=1]`testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
+The [hotspot=36-44 file=1]`testPreflightCorsRequest` test passes and prints the response headers with their values from the endpoint.
 The `/configurations/preflight` endpoint now allows preflight CORS requests.
 
 If you want, modify the server configuration and the test code to experiment with the
