added guide author

--- a/README.adoc
+++ b/README.adoc
@@ -13,6 +13,7 @@
 :page-permalink: /guides/{projectid}
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master/
 :source-highlighter: prettify
+:guide-author: Open Liberty
 = Enabling Cross-Origin Resource Sharing (CORS)
 
 [.hidden]
