--- a/README.adoc
+++ b/README.adoc
@@ -89,8 +89,10 @@ include::{common-includes}/gitclone.adoc[]
 
 == Enabling CORS
 
-You will use a REST service that is already provided for you to test your CORS configurations. Find the service in the
-`start/src/main/java/io/openliberty/guides/cors/` directory.
+You will use a REST service that is already provided for you to test your CORS configurations. 
+Navigate to the `start` directory to begin.
+Find the service in the
+`src/main/java/io/openliberty/guides/cors/` directory.
 
 Send the simple request to the `/configurations/simple` endpoint and the preflight request to the `/configurations/preflight` endpoint.
 
@@ -100,7 +102,7 @@ Send the simple request to the `/configurations/simple` endpoint and the preflig
 
 === Enabling a simple CORS configuration
 Configure the server to allow the `/configurations/simple` endpoint to accept a [hotspot=12-16 file=0]`simple` CORS request.
-Add a simple CORS configuration to the [hotspot file=0]`server.xml` file in the `start/main/liberty/config/` directory:
+Add a simple CORS configuration to the [hotspot file=0]`server.xml` file in the `src/main/liberty/config/` directory:
 
 [role="code_command hotspot file=0", subs="quotes"]
 ----
@@ -127,7 +129,7 @@ The simple CORS configuration contains the following attributes:
 Save the changes to the [hotspot file=0]`server.xml` file. The `/configurations/simple` endpoint is now ready to be
 tested with a simple CORS request.
 
-Open [hotspot file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory.
+Open [hotspot file=1]`TestCors.java` file in the `src/test/java/it/io/openliberty/guides/cors/` directory.
 
 Now we will test the simple CORS configuration that you added. Add the [hotspot=25-33 file=1]`testSimpleCorsRequest` method to the `TestCors` class.
 
@@ -139,7 +141,7 @@ Now we will test the simple CORS configuration that you added. Add the [hotspot=
 TestCors.java
 [source, java, linenums, role='code_column']
 ----
-include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment]
+include::finish/src/test/java/it/io/openliberty/guides/cors/TestCors.java[tags=!comment;!preflightTest[]]
 ----
 
 The [hotspot=25-33 file=1]`testSimpleCorsRequest` test simulates a client. It first sends a simple CORS request to the `/configurations/simple` endpoint, and then it checks for a valid response and expected headers. Lastly, it prints the response headers for you to inspect.
@@ -214,7 +216,7 @@ The follow attributes were added:
 Save the changes to the [hotspot file=0]`server.xml` file. The `/configurations/preflight` endpoint is now ready to
 be tested with a preflight CORS request.
 
-Add another test to the [hotspot file=1]`TestCors.java` file in the `start/src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
+Add another test to the [hotspot file=1]`TestCors.java` file in the `src/test/java/it/io/openliberty/guides/cors/` directory to test the preflight CORS configuration that you just added:
 
 [role="code_command hotspot=36-44 file=1", subs="quotes"]
 ----
