--- a/README.adoc
+++ b/README.adoc
@@ -11,6 +11,7 @@
 :page-releasedate: 2017-10-12
 :page-description: Learn how to enable CORS in Open Liberty without writing Java code to access resources from an external domain.
 :page-permalink: /guides/{projectid}
+:page-related-guides: ['rest-intro', 'rest-client-java']
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master/
 :source-highlighter: prettify
 :guide-author: Open Liberty
